--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Taskinator</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
+
     <header>
         <h1 class="page-title">Taskinator</h1>
         <p>Click the button below to add a new task!</p>
         <form id="task-form">
             <div class="form-group">
-                <input type="text" name="task-name" class="text-input" placeholder="Enter Task Name" />
+                <input type="text" name="task-name" placeholder="Enter Task Name" />
             </div>
             <div class="form-group">
                 <select name="task-type" class="select-dropdown">
@@ -32,6 +33,7 @@
     </header>
 
     <main class="page-content" id="page-content">
+        <!-- Tasks To Do -->
         <section class="task-list-wrapper">
             <h2 class="list-title">Tasks To Do</h2>
             <ul class="task-list" id="tasks-to-do"></ul>
